<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.christianquintero.app2.modulo2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numer1"
                android:textSize="20dp"
                android:textColor="@color/BlueDodger"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Number"
                android:layout_marginLeft="40dp"
                android:textStyle="italic|bold|normal"
                android:id="@+id/n1"
                android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numer2"
                android:textSize="20dp"
                android:textColor="@color/BlueDodger"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Number"
                android:layout_marginLeft="20dp"
                android:textStyle="italic|bold|normal"
                android:id="@+id/n2"
                android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resultado"
                        android:gravity="center"
                        android:typeface="serif"
                        android:id="@+id/result"
                        android:textStyle="normal|bold|italic"
                        android:textSize="20dp"
                        android:layout_marginTop="50dp" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Calcular"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/Blanco"
                        android:onClick="calculo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp">
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sumar"
                                android:textSize="18dp"
                                android:id="@+id/su"/>
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/restar"
                                android:textSize="18dp"
                                android:id="@+id/re"/>
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/multiplicar"
                                android:textSize="18dp"
                                android:id="@+id/mu"/>
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dividir"
                                android:textSize="18dp"
                                android:id="@+id/di"/>
                    </RadioGroup>

            </LinearLayout>
    </LinearLayout>

</LinearLayout>
